create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3105,6 +3105,216 @@ body {
 .cid-rrDOyfQL41 .dropdown-item:hover {
   color: #ffffff !important;
 }
+.cid-rvlVA2rmpj {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #2e2e2e;
+}
+.cid-rvlVA2rmpj .form-text {
+  color: #ffffff;
+  text-align: center;
+}
+@media (max-width: 767px) {
+  .cid-rvlVA2rmpj .content {
+    text-align: center;
+  }
+  .cid-rvlVA2rmpj .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-rvlVA2rmpj .img-logo img {
+  height: 6rem;
+}
+.cid-rvlVA2rmpj .form-group,
+.cid-rvlVA2rmpj .input-group-btn {
+  padding: 0;
+}
+.cid-rvlVA2rmpj .form-control {
+  font-size: .75rem;
+  text-align: center;
+  min-width: 150px;
+}
+.cid-rvlVA2rmpj .input-group-btn .btn {
+  padding: .75rem 1.5625rem !important;
+  margin-left: .625rem;
+  text-transform: none;
+  color: #fff;
+  text-align: center;
+}
+.cid-rvlVA2rmpj .copyright .mbr-text {
+  color: #767676;
+}
+@media (max-width: 767px) {
+  .cid-rvlVA2rmpj .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rvlVA2rmpj .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #000;
+  opacity: .05;
+}
+.cid-rvlVA2rmpj .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-rvlVA2rmpj .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #232323;
+}
+.cid-rvlVA2rmpj .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rvlVA2rmpj .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rvlVA2rmpj .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rvlVA2rmpj .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rvlVA2rmpj .foot-logo {
+    text-align: center !important;
+  }
+  .cid-rvlVA2rmpj .foot-title {
+    text-align: center !important;
+  }
+  .cid-rvlVA2rmpj .mbr-text {
+    text-align: center !important;
+  }
+  .cid-rvlVA2rmpj .form-group {
+    margin: 0;
+  }
+}
+.cid-rvlVA2rmpj .foot-title {
+  color: #f17300;
+  text-align: center;
+}
+.cid-rvlVA2rmpj .mbr-links-column {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-rvlVA2rmpj .foot-logo {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-rvlVG0q4fr {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #2e2e2e;
+}
+.cid-rvlVG0q4fr .mbr-text {
+  color: #ffffff;
+  margin: 0;
+  padding-top: 1.5rem;
+  text-align: center;
+}
+.cid-rvlVG0q4fr div.b {
+  padding-top: 2rem;
+}
+.cid-rvlVG0q4fr H5 {
+  text-align: center;
+  color: #cccccc;
+}
+.cid-rvlVG0q4fr H2 {
+  text-align: center;
+}
+.cid-rvlW6Bsk5g {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #2e2e2e;
+}
+.cid-rvlW6Bsk5g .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rvlW6Bsk5g .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rvlW6Bsk5g .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rvlW6Bsk5g .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-rvlW6Bsk5g .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rvlW6Bsk5g .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rvlW6Bsk5g .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-rvlW6Bsk5g .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-rvlW6Bsk5g .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rvlW6Bsk5g .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rvlW6Bsk5g .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rvlW6Bsk5g .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-rvlW6Bsk5g .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rvlW6Bsk5g .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-rvlW6Bsk5g .media-container-row .mbr-text {
+  text-align: center;
+}
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
   background: #2e2e2e;
@@ -3525,40 +3735,215 @@ body {
 .cid-rqMmyLldeY textarea.form-control {
   min-height: 188px;
 }
-.cid-rqMmAGi1WC {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
+.cid-rvlWnFbdTH {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #2e2e2e;
 }
-.cid-rqMmAGi1WC .title {
-  padding-bottom: 2.5rem;
-}
-.cid-rqMmAGi1WC .mbr-text {
-  color: #767676;
+.cid-rvlWnFbdTH .mbr-text {
+  color: #ffffff;
   margin: 0;
-  padding-top: 0.5rem;
+  padding-top: 1.5rem;
+  text-align: center;
 }
-.cid-rqMmAGi1WC .iconfont-wrapper {
-  display: flex;
-  align-items: center;
-  width: 2rem;
-  height: 2rem;
-  margin-right: 2rem;
+.cid-rvlWnFbdTH div.b {
+  padding-top: 2rem;
 }
-.cid-rqMmAGi1WC .iconfont-wrapper .amp-iconfont {
-  font-size: 2rem;
+.cid-rvlWnFbdTH H5 {
+  text-align: center;
+  color: #cccccc;
 }
-.cid-rqMmAGi1WC .wrapper {
-  display: flex;
-  padding: 1rem 0;
+.cid-rvlWnFbdTH H2 {
+  text-align: center;
 }
-.cid-rqMmAGi1WC .wrapper .b-info {
-  width: 100%;
+.cid-rvlWoZcFtL {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #2e2e2e;
+}
+.cid-rvlWoZcFtL .form-text {
+  color: #ffffff;
+  text-align: center;
 }
 @media (max-width: 767px) {
-  .cid-rqMmAGi1WC .iconfont-wrapper {
-    display: none;
+  .cid-rvlWoZcFtL .content {
+    text-align: center;
   }
+  .cid-rvlWoZcFtL .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-rvlWoZcFtL .img-logo img {
+  height: 6rem;
+}
+.cid-rvlWoZcFtL .form-group,
+.cid-rvlWoZcFtL .input-group-btn {
+  padding: 0;
+}
+.cid-rvlWoZcFtL .form-control {
+  font-size: .75rem;
+  text-align: center;
+  min-width: 150px;
+}
+.cid-rvlWoZcFtL .input-group-btn .btn {
+  padding: .75rem 1.5625rem !important;
+  margin-left: .625rem;
+  text-transform: none;
+  color: #fff;
+  text-align: center;
+}
+.cid-rvlWoZcFtL .copyright .mbr-text {
+  color: #767676;
+}
+@media (max-width: 767px) {
+  .cid-rvlWoZcFtL .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rvlWoZcFtL .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #000;
+  opacity: .05;
+}
+.cid-rvlWoZcFtL .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-rvlWoZcFtL .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #232323;
+}
+.cid-rvlWoZcFtL .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rvlWoZcFtL .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rvlWoZcFtL .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rvlWoZcFtL .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rvlWoZcFtL .foot-logo {
+    text-align: center !important;
+  }
+  .cid-rvlWoZcFtL .foot-title {
+    text-align: center !important;
+  }
+  .cid-rvlWoZcFtL .mbr-text {
+    text-align: center !important;
+  }
+  .cid-rvlWoZcFtL .form-group {
+    margin: 0;
+  }
+}
+.cid-rvlWoZcFtL .foot-title {
+  color: #f17300;
+  text-align: center;
+}
+.cid-rvlWoZcFtL .mbr-links-column {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-rvlWoZcFtL .foot-logo {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-rvlWpUEcmE {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #2e2e2e;
+}
+.cid-rvlWpUEcmE .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rvlWpUEcmE .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rvlWpUEcmE .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rvlWpUEcmE .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-rvlWpUEcmE .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rvlWpUEcmE .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rvlWpUEcmE .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-rvlWpUEcmE .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-rvlWpUEcmE .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rvlWpUEcmE .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rvlWpUEcmE .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rvlWpUEcmE .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-rvlWpUEcmE .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rvlWpUEcmE .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-rvlWpUEcmE .media-container-row .mbr-text {
+  text-align: center;
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
@@ -3983,56 +4368,78 @@ body {
     width: 100% !important;
   }
 }
-.cid-rqEOUtx4fV {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
+.cid-rvlWwZtQiV {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #2e2e2e;
 }
-.cid-rqEOUtx4fV .form-text {
-  color: #767676;
+.cid-rvlWwZtQiV .mbr-text {
+  color: #ffffff;
+  margin: 0;
+  padding-top: 1.5rem;
+  text-align: center;
+}
+.cid-rvlWwZtQiV div.b {
+  padding-top: 2rem;
+}
+.cid-rvlWwZtQiV H5 {
+  text-align: center;
+  color: #cccccc;
+}
+.cid-rvlWwZtQiV H2 {
+  text-align: center;
+}
+.cid-rvlWxJEJye {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #2e2e2e;
+}
+.cid-rvlWxJEJye .form-text {
+  color: #ffffff;
+  text-align: center;
 }
 @media (max-width: 767px) {
-  .cid-rqEOUtx4fV .content {
+  .cid-rvlWxJEJye .content {
     text-align: center;
   }
-  .cid-rqEOUtx4fV .content > div:not(:last-child) {
+  .cid-rvlWxJEJye .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
-.cid-rqEOUtx4fV .img-logo img {
+.cid-rvlWxJEJye .img-logo img {
   height: 6rem;
 }
-.cid-rqEOUtx4fV .form-group,
-.cid-rqEOUtx4fV .input-group-btn {
+.cid-rvlWxJEJye .form-group,
+.cid-rvlWxJEJye .input-group-btn {
   padding: 0;
 }
-.cid-rqEOUtx4fV .form-control {
+.cid-rvlWxJEJye .form-control {
   font-size: .75rem;
   text-align: center;
   min-width: 150px;
 }
-.cid-rqEOUtx4fV .input-group-btn .btn {
+.cid-rvlWxJEJye .input-group-btn .btn {
   padding: .75rem 1.5625rem !important;
   margin-left: .625rem;
   text-transform: none;
   color: #fff;
   text-align: center;
 }
-.cid-rqEOUtx4fV .copyright .mbr-text {
+.cid-rvlWxJEJye .copyright .mbr-text {
   color: #767676;
 }
 @media (max-width: 767px) {
-  .cid-rqEOUtx4fV .footer-lower .copyright {
+  .cid-rvlWxJEJye .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rqEOUtx4fV .footer-lower hr {
+.cid-rvlWxJEJye .footer-lower hr {
   margin: 1rem 0;
   border-color: #000;
   opacity: .05;
 }
-.cid-rqEOUtx4fV .footer-lower .social-list {
+.cid-rvlWxJEJye .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -4042,44 +4449,134 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rqEOUtx4fV .footer-lower .social-list .mbr-iconfont-social {
+.cid-rvlWxJEJye .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #232323;
 }
-.cid-rqEOUtx4fV .footer-lower .social-list .soc-item {
+.cid-rvlWxJEJye .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rqEOUtx4fV .footer-lower .social-list a {
+.cid-rvlWxJEJye .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rqEOUtx4fV .footer-lower .social-list a:hover {
+.cid-rvlWxJEJye .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rqEOUtx4fV .footer-lower .social-list {
+  .cid-rvlWxJEJye .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
 @media (max-width: 767px) {
-  .cid-rqEOUtx4fV .foot-logo {
+  .cid-rvlWxJEJye .foot-logo {
     text-align: center !important;
   }
-  .cid-rqEOUtx4fV .foot-title {
+  .cid-rvlWxJEJye .foot-title {
     text-align: center !important;
   }
-  .cid-rqEOUtx4fV .mbr-text {
+  .cid-rvlWxJEJye .mbr-text {
     text-align: center !important;
   }
-  .cid-rqEOUtx4fV .form-group {
+  .cid-rvlWxJEJye .form-group {
     margin: 0;
   }
 }
-.cid-rqEOUtx4fV .foot-title {
-  text-align: right;
+.cid-rvlWxJEJye .foot-title {
+  color: #f17300;
+  text-align: center;
+}
+.cid-rvlWxJEJye .mbr-links-column {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-rvlWxJEJye .foot-logo {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-rvlWzhNl7z {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #2e2e2e;
+}
+.cid-rvlWzhNl7z .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rvlWzhNl7z .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rvlWzhNl7z .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rvlWzhNl7z .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-rvlWzhNl7z .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rvlWzhNl7z .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rvlWzhNl7z .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-rvlWzhNl7z .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-rvlWzhNl7z .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rvlWzhNl7z .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rvlWzhNl7z .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rvlWzhNl7z .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-rvlWzhNl7z .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rvlWzhNl7z .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-rvlWzhNl7z .media-container-row .mbr-text {
+  text-align: center;
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
