--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1648,6 +1648,10 @@ body {
 .cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rqDmUsacME .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rqDmUsacME .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1748,6 +1752,10 @@ body {
   .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rqDmUsacME .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rqDmUsacME .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-buttons,
   .cid-rqDmUsacME .navbar-collapse.show .navbar-buttons {
@@ -2941,6 +2949,10 @@ body {
 .cid-rrDOyfQL41 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rrDOyfQL41 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rrDOyfQL41 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rrDOyfQL41 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rrDOyfQL41 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -3041,6 +3053,10 @@ body {
   .cid-rrDOyfQL41 .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rrDOyfQL41 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rrDOyfQL41 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rrDOyfQL41 .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rrDOyfQL41 .navbar-collapse.collapsing .navbar-buttons,
   .cid-rrDOyfQL41 .navbar-collapse.show .navbar-buttons {
@@ -3550,6 +3566,10 @@ body {
 .cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rqDmUsacME .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rqDmUsacME .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -3650,6 +3670,10 @@ body {
   .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rqDmUsacME .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rqDmUsacME .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-buttons,
   .cid-rqDmUsacME .navbar-collapse.show .navbar-buttons {
@@ -4821,6 +4845,10 @@ body {
 .cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rqDmUsacME .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rqDmUsacME .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -4921,6 +4949,10 @@ body {
   .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rqDmUsacME .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rqDmUsacME .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-buttons,
   .cid-rqDmUsacME .navbar-collapse.show .navbar-buttons {
