--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1415,12 +1415,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #ffffff;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -1511,7 +1511,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1582,7 +1582,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rqDmUsacME button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1823,7 +1823,7 @@ body {
 .cid-rqDnp1LDDF {
   padding-top: 75px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/mbr-1920x1275.jpg");
+  background-color: #ffffff;
 }
 .cid-rqDnp1LDDF .mbr-figure {
   margin: 0 auto;
@@ -1840,6 +1840,13 @@ body {
   .cid-rqDnp1LDDF .mbr-figure img {
     width: 100% !important;
   }
+}
+.cid-rqDnp1LDDF H1 {
+  color: #054a91;
+}
+.cid-rqDnp1LDDF .mbr-text,
+.cid-rqDnp1LDDF .mbr-section-btn {
+  color: #f17300;
 }
 .cid-rvkUV5mPZb {
   padding-top: 60px;
@@ -2716,12 +2723,12 @@ body {
 }
 .cid-rrDOyfQL41 .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rrDOyfQL41 .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #ffffff;
 }
 .cid-rrDOyfQL41 a {
   font-style: normal;
@@ -2812,7 +2819,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rrDOyfQL41 .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2883,7 +2890,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rrDOyfQL41 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3333,12 +3340,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #ffffff;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -3429,7 +3436,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3500,7 +3507,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rqDmUsacME button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3971,12 +3978,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #ffffff;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -4067,7 +4074,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4138,7 +4145,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rqDmUsacME button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4612,12 +4619,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #ffffff;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -4708,7 +4715,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4779,7 +4786,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rqDmUsacME button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
