--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1415,12 +1415,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #4f4943;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #4f4943;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -1511,7 +1511,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #4f4943;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2161,7 +2161,7 @@ body {
 .cid-rrDkFgAWRo {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #2e2e2e;
+  background-color: #4f4943;
 }
 .cid-rrDkFgAWRo .mbr-section-subtitle {
   color: #ffffff;
@@ -2299,7 +2299,7 @@ body {
 .cid-rrCAt7sHyy {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #2e2e2e;
+  background-color: #4f4943;
 }
 .cid-rrCAt7sHyy .line {
   background-color: #ffffff;
@@ -2432,7 +2432,7 @@ body {
 .cid-ru7LqRR3Y1 {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-color: #2e2e2e;
+  background-color: #4f4943;
 }
 .cid-ru7LqRR3Y1 .form-text {
   color: #ffffff;
@@ -2540,7 +2540,7 @@ body {
 .cid-rrdtUmtBG3 {
   padding-top: 0px;
   padding-bottom: 15px;
-  background-color: #2e2e2e;
+  background-color: #4f4943;
 }
 .cid-rrdtUmtBG3 .mbr-text {
   color: #ffffff;
@@ -2561,7 +2561,7 @@ body {
 .cid-rra6HgoXVT {
   padding-top: 15px;
   padding-bottom: 0px;
-  background-color: #2e2e2e;
+  background-color: #4f4943;
 }
 .cid-rra6HgoXVT .row-links {
   width: 100%;
@@ -2723,12 +2723,12 @@ body {
 }
 .cid-rrDOyfQL41 .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #4f4943;
   transition: none;
   min-height: 77px;
 }
 .cid-rrDOyfQL41 .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #4f4943;
 }
 .cid-rrDOyfQL41 a {
   font-style: normal;
@@ -2819,7 +2819,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rrDOyfQL41 .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #4f4943;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3340,12 +3340,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #4f4943;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #4f4943;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -3436,7 +3436,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #4f4943;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3978,12 +3978,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #4f4943;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #4f4943;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -4074,7 +4074,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #4f4943;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4619,12 +4619,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #4f4943;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #4f4943;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -4715,7 +4715,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #4f4943;
   display: none;
   position: absolute;
   min-width: 5rem;
