--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1820,6 +1820,14 @@ body {
 .cid-rqDmUsacME .dropdown-item:hover {
   color: #ffffff !important;
 }
+.cid-rBYgkRFXRf {
+  padding-top: 90px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rBYgkRFXRf P {
+  color: #767676;
+}
 .cid-rqDnp1LDDF {
   padding-top: 75px;
   padding-bottom: 30px;
@@ -2723,12 +2731,12 @@ body {
 }
 .cid-rrDOyfQL41 .navbar {
   padding: .5rem 0;
-  background: #4f4943;
+  background: #2e2e2e;
   transition: none;
   min-height: 77px;
 }
 .cid-rrDOyfQL41 .navbar-dropdown.bg-color.transparent.opened {
-  background: #4f4943;
+  background: #2e2e2e;
 }
 .cid-rrDOyfQL41 a {
   font-style: normal;
@@ -2819,7 +2827,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rrDOyfQL41 .dropdown .dropdown-menu {
-  background: #4f4943;
+  background: #2e2e2e;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3340,12 +3348,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #4f4943;
+  background: #2e2e2e;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #4f4943;
+  background: #2e2e2e;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -3436,7 +3444,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #4f4943;
+  background: #2e2e2e;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3978,12 +3986,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #4f4943;
+  background: #2e2e2e;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #4f4943;
+  background: #2e2e2e;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -4074,7 +4082,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #4f4943;
+  background: #2e2e2e;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4619,12 +4627,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #4f4943;
+  background: #2e2e2e;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #4f4943;
+  background: #2e2e2e;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -4715,7 +4723,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #4f4943;
+  background: #2e2e2e;
   display: none;
   position: absolute;
   min-width: 5rem;
